--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,9 @@ setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-selection
+# copy to system clipboard with <Prefix> y
+bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
