--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,10 +46,7 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Mouse Commands
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-setw -g mode-mouse on
+set -g mouse on
 
 bind R source-file ~/.tmux.conf
 
